# ChangeLog for sys-freebsd/freebsd-lib
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-lib/ChangeLog,v 1.45 2006/12/29 15:17:06 flameeyes Exp $

*freebsd-lib-6.2_rc2 (29 Dec 2006)

  29 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -freebsd-lib-6.2_rc1.ebuild, -freebsd-lib-6.2_rc1-r1.ebuild,
  +freebsd-lib-6.2_rc2.ebuild:
  Bump to rc2 and remove older versions.

*freebsd-lib-6.2_rc1-r1 (28 Dec 2006)

  28 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  +freebsd-lib-6.2_rc1-r1.ebuild:
  Add new revision that does not build libedit anymore.

  22 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/freebsd-lib-fixmp.patch, freebsd-lib-6.1.ebuild,
  -freebsd-lib-6.2_beta3.ebuild, freebsd-lib-6.2_rc1.ebuild:
  Remove the fixmp patch, that was applied on a Makefile removed right
  afterward; remove beta3.

*freebsd-lib-6.2_rc1 (19 Nov 2006)

  19 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  +freebsd-lib-6.2_rc1.ebuild:
  Version bump to 6.2-RC1.

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  -freebsd-lib-6.2_beta2.ebuild:
  Remove 6.2_beta2.

  17 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  freebsd-lib-6.2_beta3.ebuild:
  Fix crossdev build, crt* files were installed in the wrong location.

*freebsd-lib-6.2_beta3 (01 Nov 2006)

  01 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  +freebsd-lib-6.2_beta3.ebuild:
  Bump to 6.2_beta3.

  26 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> freebsd-lib-6.1.ebuild,
  freebsd-lib-6.2_beta2.ebuild:
  Require the SYS package when crosscompiling, it's irrelevant which kernel
  one is using.

  22 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  freebsd-lib-6.2_beta2.ebuild:
  Install a sandbox configuration file to allow /dev/crypto access in sandbox,
  to close bug #138344.

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Remove 6.2_beta1 ebuild.

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>