@@ -57,14 +57,14 @@ EBUILD freebsd-lib-6.1.ebuild 7061 RMD160 88accfd80d617bd76f3fe29047a4b0566266a5
 MD5 27abb0a51efadf54eb5484487f9a6597 freebsd-lib-6.1.ebuild 7061
 RMD160 88accfd80d617bd76f3fe29047a4b0566266a5d5 freebsd-lib-6.1.ebuild 7061
 SHA256 dea7dcb78467a3e960f3ac2a42d346e69aa7944d8472d6037255f5e182af31f1 freebsd-lib-6.1.ebuild 7061
-EBUILD freebsd-lib-6.2_rc2.ebuild 7683 RMD160 75f84e93ef1c1444de6764bbd58f966558735b6f SHA1 0af1ac471bcdbb12d833f5a5bc0916782b18e025 SHA256 cbd2654c41381bcbcb36f17e07a051eb0e5f7d1836f59812ea4a6aa058ba61a0
-MD5 0164ab1e57fc82a3396aa85d88e82968 freebsd-lib-6.2_rc2.ebuild 7683
-RMD160 75f84e93ef1c1444de6764bbd58f966558735b6f freebsd-lib-6.2_rc2.ebuild 7683
-SHA256 cbd2654c41381bcbcb36f17e07a051eb0e5f7d1836f59812ea4a6aa058ba61a0 freebsd-lib-6.2_rc2.ebuild 7683
-MISC ChangeLog 12952 RMD160 0325482795c60d60d6dcd4a8d077e115e3d0f170 SHA1 9d0fed8d8457e6b3b4c63ad70760c8645b426ee3 SHA256 ad5c821c76ed85ff386463c0a7bd93b86aa1b8ef00a92f2b4b741f5b2da79958
-MD5 499bdb1d1820dca149dd350a46a18803 ChangeLog 12952
-RMD160 0325482795c60d60d6dcd4a8d077e115e3d0f170 ChangeLog 12952
-SHA256 ad5c821c76ed85ff386463c0a7bd93b86aa1b8ef00a92f2b4b741f5b2da79958 ChangeLog 12952
+EBUILD freebsd-lib-6.2_rc2.ebuild 7741 RMD160 07a21b0c9610810536b79d5e6bbe0bbc5596f455 SHA1 d7afd4cccf37e39a847c571ba5dacbcadae56862 SHA256 6f604152156222fd14a586ad104a79c2036ca9bc6c645c2db5ce9e0998622daa
+MD5 90893be492e00978c67371f5eef37164 freebsd-lib-6.2_rc2.ebuild 7741
+RMD160 07a21b0c9610810536b79d5e6bbe0bbc5596f455 freebsd-lib-6.2_rc2.ebuild 7741
+SHA256 6f604152156222fd14a586ad104a79c2036ca9bc6c645c2db5ce9e0998622daa freebsd-lib-6.2_rc2.ebuild 7741
+MISC ChangeLog 13083 RMD160 98f0de2c6ad34c7fdbceda52d1d6a36abe4a0715 SHA1 83ffcc245567a1bb52248e46a4963a757f4f7f67 SHA256 3093b356dfa5709c28ccc201551fd08ee81ee65682cee419e0d550657555ea0f
+MD5 2e1acfe91210b41c26fb56862d5edf24 ChangeLog 13083
+RMD160 98f0de2c6ad34c7fdbceda52d1d6a36abe4a0715 ChangeLog 13083
+SHA256 3093b356dfa5709c28ccc201551fd08ee81ee65682cee419e0d550657555ea0f ChangeLog 13083
 MISC metadata.xml 156 RMD160 60b5820a08275f307e5bd936d78f5afd1f141086 SHA1 d9d9d4f2b5afc58339ea3e562fca490156935f1f SHA256 30ab515d6ac492d3d6c36ac3c675511742c2149e56a6b3228c8d22ab8edb3ff7
 MD5 2bd48a5ae413433cbb36110b219ce97c metadata.xml 156
 RMD160 60b5820a08275f307e5bd936d78f5afd1f141086 metadata.xml 156
@@ -76,9 +76,9 @@ MD5 1b9f4b4a6f0946d07614fbba228f29f2 files/digest-freebsd-lib-6.2_rc2 2168
 RMD160 dc46012dff220f4cc569b2fc2e47eabd9b774bd5 files/digest-freebsd-lib-6.2_rc2 2168
 SHA256 701b8e91666e40ba5663587ca3426c70b3bc9b7a312ca97fb2132a53aef25527 files/digest-freebsd-lib-6.2_rc2 2168
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFlTF8AiZjviIA2XgRAr5iAKCQWwyqDvmCUdEXk6aB2dA0CyRn2gCfTXdM
-MamPvavLSMlG+LnZJtfqN6s=
-=Ee+7
+iD8DBQFFmufsAiZjviIA2XgRAklsAJ9puzrVeg2ldho/Fwd/tLSSG4puRQCgzqDX
+jOyWbOGulQ/l/z5iShLPRyU=
+=9kQh
 -----END PGP SIGNATURE-----
