@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-lib/freebsd-lib-6.2_rc2.ebuild,v 1.1 2006/12/29 15:17:06 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-lib/freebsd-lib-6.2_rc2.ebuild,v 1.2 2007/01/02 23:16:38 flameeyes Exp $
 
 inherit bsdmk freebsd flag-o-matic toolchain-funcs
 
@@ -109,6 +109,7 @@ src_unpack() {
 	freebsd_src_unpack
 
 	sed -i -e 's:-o/dev/stdout:-t:' "${S}/libc/net/Makefile.inc"
+	sed -i -e 's:histedit.h::' "${WORKDIR}/include/Makefile"
 
 	use build && return 0
 
