@@ -1,6 +1,10 @@
 # ChangeLog for sys-freebsd/freebsd-lib
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-lib/ChangeLog,v 1.45 2006/12/29 15:17:06 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-freebsd/freebsd-lib/ChangeLog,v 1.46 2007/01/02 23:16:38 flameeyes Exp $
+
+  02 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
+  freebsd-lib-6.2_rc2.ebuild:
+  Remove histedit.h file from being installed.
 
 *freebsd-lib-6.2_rc2 (29 Dec 2006)
 
